# media-pipeline

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rust-toolchain.toml
config/: media-pipeline.toml.example
config/exclude_lists/: games_exclude.list  movies_exclude.list  music_exclude.list  tv_exclude.list
src/: config.rs  db.rs  layout.rs  library.rs  main.rs  metadata.rs  pipeline.rs  plex.rs  policy.rs  rename.rs  sync.rs  transcode.rs
systemd/: media-pipeline.service  media-pipeline.timer
