[package]
name = "media-pipeline"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["media-pipeline authors"]
description = "Automated media sync, rename, transcode, and ingest pipeline"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# SSH / SFTP
russh = { version = "0.45", features = ["openssl"] }
russh-sftp = "2.0"
async-trait = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# HTTP client for Plex API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hashing
sha2 = "0.10"

# File / path utilities
walkdir = "2.5"
tempfile = "3.10"
pathdiff = "0.2"

# Regex for filename parsing
regex = "1.10"
lazy_static = "1.5"

# JSON (manifest hashing)
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Other
humansize = "2.1"
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
injectorpp = "0.5"

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[[bin]]
name = "media-pipeline"
path = "src/main.rs"
